@@ -20,7 +20,11 @@
    
   <target name="main" id="main" depends="jar"/>
    
-  <target id="classes" name="classes">
+   <target id="clean" name="clean" description="Removes autogenerated files.">
+     <delete dir="${build.dir}" />
+   </target>
+
+   <target id="classes" name="classes">
     <mkdir dir="${classes.dir}"/>
     <javac srcdir="${source.dir}" destdir="${classes.dir}">
       <classpath refid="project.class.path" />
